// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EventInventory /> index route should render correctly 1`] = `
<styled.div>
  <Flex
    direction="column"
    height="100%"
  >
    <Styled(styled.div)
      padding="25px"
    >
      <DashboardHeader
        isEventInventory={true}
      />
      <Styled(styled.div)
        marginTop="1rem"
      >
        <EventInventorySeatMap />
      </Styled(styled.div)>
    </Styled(styled.div)>
    <styled.div
      height="2rem"
    />
    <Styled(styled.div)
      padding="0 1rem"
    >
      <Styled(Styled(styled.button))
        disabled={true}
        onClick={[MockFunction]}
        small={true}
        title="Update Selected Items"
      >
        Bulk Update (
        0
         Rows)
      </Styled(Styled(styled.button))>
    </Styled(styled.div)>
    <Styled(FlexItem)>
      <Connect(VirtualizedEventInventoryPresenter)
        event={Object {}}
      />
    </Styled(FlexItem)>
  </Flex>
</styled.div>
`;

exports[`<EventInventory /> index route should render correctly when there are selectedEventIds 1`] = `
<styled.div>
  <Flex
    direction="column"
    height="100%"
  >
    <Styled(styled.div)
      padding="25px"
    >
      <DashboardHeader
        isEventInventory={true}
      />
      <Styled(styled.div)
        marginTop="1rem"
      >
        <EventInventorySeatMap />
      </Styled(styled.div)>
    </Styled(styled.div)>
    <styled.div
      height="2rem"
    />
    <Styled(styled.div)
      padding="0 1rem"
    >
      <Styled(Styled(styled.button))
        disabled={false}
        onClick={[MockFunction]}
        small={true}
        title="Update Selected Items"
      >
        Bulk Update (
        3
         Rows)
      </Styled(Styled(styled.button))>
    </Styled(styled.div)>
    <Styled(FlexItem)>
      <Connect(VirtualizedEventInventoryPresenter)
        event={Object {}}
      />
    </Styled(FlexItem)>
  </Flex>
</styled.div>
`;

exports[`<EventInventory /> index route should render correctly when there are selectedEventIds and isBulkUpdating is true 1`] = `
<styled.div>
  <Flex
    direction="column"
    height="100%"
  >
    <Styled(styled.div)
      padding="25px"
    >
      <DashboardHeader
        isEventInventory={true}
      />
      <Styled(styled.div)
        marginTop="1rem"
      >
        <EventInventorySeatMap />
      </Styled(styled.div)>
    </Styled(styled.div)>
    <styled.div
      height="2rem"
    />
    <Styled(styled.div)
      padding="0 1rem"
    >
      <Styled(Styled(styled.button))
        disabled={false}
        onClick={[MockFunction]}
        small={true}
        title="Update Selected Items"
      >
        Bulk Update (
        3
         Rows)
      </Styled(Styled(styled.button))>
    </Styled(styled.div)>
    <Styled(FlexItem)>
      <Connect(VirtualizedEventInventoryPresenter)
        event={Object {}}
      />
    </Styled(FlexItem)>
  </Flex>
  <Connect(BulkUpdateModalPresenter)
    selectedEventIds={
      Array [
        1,
        2,
        3,
      ]
    }
  />
</styled.div>
`;
